fix(settings): name and url truncation/word-break

--- a/src/app/settings/views/Images/Sources/components/SourcesTable/_index.scss
+++ b/src/app/settings/views/Images/Sources/components/SourcesTable/_index.scss
@@ -8,6 +8,17 @@
   tr {
     .name {
       width: 20%;
+
+      div {
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+
+    .url {
+      width: 25%;
+      word-break: break-all;
+      white-space: normal;
     }
 
     .priority {
@@ -18,11 +29,6 @@
     .signed {
       width: 20%;
       text-align: center;
-    }
-
-    .url {
-      word-break: break-all;
-      white-space: normal;
     }
 
     .actions {
